<resources>
    <string name="app_name">ReachaBLE_Client</string>
    <string name="toolbar_title">@string/app_name</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="btn_bucket_reload">reload</string>
    <string name="menu_s3_list_reload">reload</string>
    <string name="menu_show_credentials">Show credentials</string>
    <string name="lbl_key">"Key: "</string>
    <string name="lbl_size">"Size: "</string>
    <string name="progress_dialog_title">Getting files</string>
    <string name="progress_dialog_message">Getting file information.</string>
    <string name="lbl_select_file">"Selected file: "</string>
    <string name="menu_s3_upload_select_file">Select file</string>
    <string name="menu_s3_begin_upload">Begin upload</string>
    <string name="lbl_access_key">"AccessKey: "</string>
    <string name="lbl_secret_key">"SecretKey: "</string>
    <string name="lbl_byte">bytes</string>
    <string name="lbl_s3_download_empty">No files.</string>
    <string-array name="categories">
        <item>All</item>
        <item>Book</item>
        <item>Food</item>
        <item>Music</item>
        <item>Game</item>
    </string-array>

    <string-array name="mode_array">
        <item>DownLoad</item>
        <item>Delete</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_btn">ServiceStart</string>
    <string name="finish_btn">ServiceFinish</string>
    <string name="filter">絞り込み</string>
    <string name="update">更新</string>
    <string name="select_coupon">クーポン詳細</string>
    <string name="search">検索</string>
    <string name="bluetooth">Bluetooth</string>
    <integer name="tag_company_name">0</integer>
    <string name="title_activity_coupon_detail">CouponDetail</string>
    <string name="transition_img">transition_img</string>
    <string name="transition_toolbar">transition_toolbar</string>
    <string name="transition_title">transition_title</string>
    <string name="transition_company_name">transition_company_name</string>
    <string name="no_category">No Category</string>

</resources>