<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <!-- ヘッダーコンテンツ -->

            <ImageView
                android:id="@+id/img_coupon_pic"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="centerCrop"
                android:transitionName="@string/transition_img" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:transitionName="@string/transition_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/coupon_title"
                android:textSize="25dp"
                android:gravity="bottom"
                android:transitionName="@string/transition_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/company_name"
                android:text="hoge"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:gravity="bottom"
                android:transitionName="@string/transition_company_name"
                android:drawableStart="@drawable/ic_perm_identity_black_24dp"
                android:drawablePadding="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <include layout="@layout/divider" />


            <TextView
                android:id="@+id/address"
                android:text="東京"
                android:textSize="20dp"
                android:drawablePadding="20dp"
                android:layout_marginTop="20dp"
                android:gravity="bottom"
                android:drawableStart="@drawable/ic_directions_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <include layout="@layout/divider" />


            <TextView
                android:id="@+id/phone_number"
                android:text="080-0000-0000"
                android:textSize="20dp"
                android:drawablePadding="20dp"
                android:layout_marginTop="20dp"
                android:gravity="bottom"
                android:drawableStart="@drawable/ic_phone_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <include layout="@layout/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_marginBottom="5dp"
                    android:gravity="bottom"
                    android:drawableStart="@drawable/ic_description_black_24dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/description"
                    android:text="あ"
                    android:textSize="20dp"
                    android:gravity="bottom"
                    android:layout_marginLeft="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <include layout="@layout/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_marginBottom="5dp"
                    android:gravity="bottom"
                    android:drawableStart="@drawable/ic_label_black_24dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/categorys"
                    android:text="あ"
                    android:textSize="20dp"
                    android:gravity="bottom"
                    android:layout_marginLeft="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <include layout="@layout/divider" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
